# ZTrans

./: .gitignore  CLAUDE.md  README.md  pubspec.yaml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/ztrans/: MainActivity.kt
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/src/pages/: home_page.dart
lib/src/settings/: settings_provider.dart
lib/src/themes/: app_themes.dart
lib/src/widgets/: region_selector.dart  title_bar.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugins.cmake
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
native/hub/: Cargo.toml
native/hub/src/: lib.rs
native/hub/src/actors/: mod.rs  shortcut_service.rs  translator.rs
native/hub/src/signals/: mod.rs
packaging/: build-arch.sh
packaging/arch/: PKGBUILD  ztrans.desktop
packaging/kde/: install-kwin-script.sh
packaging/kde/kwin/ztrans_popup/: metadata.json
packaging/kde/kwin/ztrans_popup/contents/code/: main.js
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
